# foc213-bankstat

./: CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: DelegateComboBox.cpp  DelegateComboBox.h  application.cc  application.h  calculations.cpp  calculations.h  main.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cc  utils.h
